force-app/main/default/objects/Contact_Relationship__c/Contact_Relationship__c.object-meta.xml
<CustomObject>
    <label>Contact Relationship</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Contact Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>