force-app/main/default/objects/Contact_Relationship__c/fields/Inverse_Role__c.field-meta.xml
<CustomField>
    <fullName>Inverse_Role__c</fullName>
    <formula>Related_Role__r.Inverse_Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role</label>
    <type>Text</type>
</CustomField>