force-app/main/default/objects/Contact_Relationship__c/fields/InverseRelationship__c.field-meta.xml
<CustomField>
    <fullName>InverseRelationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Uniquely identifies the relationship between Contact__c and RelatedContact__c so that it can be referenced by a trigger that creates the inverse relationship record.</description>
    <label>InverseRelationship</label>
    <referenceTo>Contact_Relationship__c</referenceTo>
    <relationshipLabel>Contact Contact Relations</relationshipLabel>
    <relationshipName>Contact_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>