force-app/main/default/objects/Contact_Relationship__c/fields/Is_Dependent__c.field-meta.xml
<CustomField>
    <fullName>Is_Dependent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dependent</label>
    <type>Checkbox</type>
</CustomField>