force-app/main/default/objects/Contact_Relationship__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Relationships (Related Contact)</relationshipLabel>
    <relationshipName>Contact_Relationships1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>