force-app/main/default/objects/Contact_Relationship__c/fields/Related_Role__c.field-meta.xml
<CustomField>
    <fullName>Related_Role__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Role</label>
    <referenceTo>Reciprocal_Role__c</referenceTo>
    <relationshipLabel>Contact Relationships</relationshipLabel>
    <relationshipName>Contact_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>