force-app/main/default/objects/Contact_Relationship__c/validationRules/Contact_must_be_different.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_different</fullName>
    <active>true</active>
    <errorConditionFormula>Contact__c ==  Related_Contact__c</errorConditionFormula>
    <errorDisplayField>Related_Contact__c</errorDisplayField>
    <errorMessage>Related contact must not be same to contact. Choose another contact</errorMessage>
</ValidationRule>